--- a/SocialNetworkAnalysis.UI/MainWindow.xaml
+++ b/SocialNetworkAnalysis.UI/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SocialNetworkAnalysis.UI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Sosyal Ağ Analizi ve Görselleştirme" Height="600" Width="900" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
 
     </Grid>
