--- a/SocialNetworkAnalysis.UI/MainWindow.xaml
+++ b/SocialNetworkAnalysis.UI/MainWindow.xaml
@@ -23,7 +23,8 @@
             <!-- File Operations -->
             <GroupBox Header="Dosya İşlemleri" Margin="0,0,0,10">
                 <StackPanel Margin="5">
-                    <!-- Buttons will be added here -->
+                    <Button x:Name="BtnLoadCsv" Content="CSV Yükle" Height="30" Margin="0,0,0,5" Click="BtnLoadCsv_Click"/>
+                    <Button x:Name="BtnSaveGraph" Content="Grafiği Kaydet" Height="30" Click="BtnSaveGraph_Click"/>
                 </StackPanel>
             </GroupBox>
         </StackPanel>
