--- a/SocialNetworkAnalysis.UI/MainWindow.xaml
+++ b/SocialNetworkAnalysis.UI/MainWindow.xaml
@@ -27,6 +27,29 @@
                     <Button x:Name="BtnSaveGraph" Content="Grafiği Kaydet" Height="30" Click="BtnSaveGraph_Click"/>
                 </StackPanel>
             </GroupBox>
+
+            <!-- Algorithms -->
+            <GroupBox Header="Algoritmalar" Margin="0,0,0,10">
+                <StackPanel Margin="5">
+                    <TextBlock Text="Seçim Modu:" FontWeight="Bold" Margin="0,0,0,5"/>
+                    <RadioButton x:Name="RadioSource" Content="Başlangıç (Kaynak) Seç" IsChecked="True" Margin="0,0,0,2"/>
+                    <RadioButton x:Name="RadioTarget" Content="Bitiş (Hedef) Seç" Margin="0,0,0,5"/>
+
+                    <TextBlock Text="Kaynak ID:" Margin="0,5,0,0"/>
+                    <TextBox x:Name="TxtSourceId" IsReadOnly="True" Background="#EEE" Margin="0,0,0,5"/>
+
+                    <TextBlock Text="Hedef ID:" Margin="0,5,0,0"/>
+                    <TextBox x:Name="TxtTargetId" IsReadOnly="True" Background="#EEE" Margin="0,0,0,10"/>
+
+                    <Button x:Name="BtnBfs" Content="BFS (Gezinti)" Height="25" Margin="0,0,0,5" Click="BtnBfs_Click"/>
+                    <Button x:Name="BtnDfs" Content="DFS (Gezinti)" Height="25" Margin="0,0,0,5" Click="BtnDfs_Click"/>
+                    <Separator Margin="0,5"/>
+                    <Button x:Name="BtnDijkstra" Content="Dijkstra (En Kısa Yol)" Height="25" Margin="0,0,0,5" Click="BtnDijkstra_Click"/>
+                    <Button x:Name="BtnAStar" Content="A* (En Kısa Yol)" Height="25" Margin="0,0,0,5" Click="BtnAStar_Click"/>
+                    <Separator Margin="0,5"/>
+                    <Button x:Name="BtnCentrality" Content="Merkezilik (Centrality)" Height="25" Click="BtnCentrality_Click"/>
+                </StackPanel>
+            </GroupBox>
         </StackPanel>
     </Grid>
 </Window>
