--- a/SocialNetworkAnalysis.UI/MainWindow.xaml
+++ b/SocialNetworkAnalysis.UI/MainWindow.xaml
@@ -50,6 +50,14 @@
                     <Button x:Name="BtnCentrality" Content="Merkezilik (Centrality)" Height="25" Click="BtnCentrality_Click"/>
                 </StackPanel>
             </GroupBox>
+            </GroupBox>
+
+            <!-- Info Panel -->
+            <GroupBox Header="Bilgi / Sonuçlar" Height="150">
+                <ScrollViewer>
+                    <TextBlock x:Name="TxtInfo" TextWrapping="Wrap" Margin="5"/>
+                </ScrollViewer>
+            </GroupBox>
         </StackPanel>
     </Grid>
 </Window>
