--- a/SocialNetworkAnalysis.UI/MainWindow.xaml
+++ b/SocialNetworkAnalysis.UI/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SocialNetworkAnalysis.UI"
         mc:Ignorable="d"
-        Title="Sosyal Ağ Analizi ve Görselleştirme" Height="600" Width="900" 
+        Title="Sosyal Ağ Analizi ve Görselleştirme" Height="800" Width="1200" 
         WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="300" />
         </Grid.ColumnDefinitions>
 
         <!-- Left Side: Canvas -->
@@ -24,7 +24,23 @@
             <GroupBox Header="Dosya İşlemleri" Margin="0,0,0,10">
                 <StackPanel Margin="5">
                     <Button x:Name="BtnLoadCsv" Content="CSV Yükle" Height="30" Margin="0,0,0,5" Click="BtnLoadCsv_Click"/>
-                    <Button x:Name="BtnSaveGraph" Content="Grafiği Kaydet" Height="30" Click="BtnSaveGraph_Click"/>
+                    <Button x:Name="BtnLoadJson" Content="JSON Yükle" Height="30" Margin="0,0,0,5" Click="BtnLoadJson_Click"/>
+                    <Button x:Name="BtnSaveCsv" Content="CSV Kaydet" Height="30" Margin="0,0,0,5" Click="BtnSaveCsv_Click"/>
+                    <Button x:Name="BtnSaveJson" Content="JSON Kaydet" Height="30" Margin="0,0,0,5" Click="BtnSaveJson_Click"/>
+                    <Button x:Name="BtnExportMatrix" Content="Komşuluk Matrisi Export" Height="30" Margin="0,0,0,5" Click="BtnExportMatrix_Click"/>
+                    <Button x:Name="BtnExportList" Content="Komşuluk Listesi Export" Height="30" Click="BtnExportList_Click"/>
+                </StackPanel>
+            </GroupBox>
+
+            <!-- Node/Edge Management -->
+            <GroupBox Header="Düğüm/Kenar Yönetimi" Margin="0,0,0,10">
+                <StackPanel Margin="5">
+                    <Button x:Name="BtnAddNode" Content="Düğüm Ekle" Height="25" Margin="0,0,0,5" Click="BtnAddNode_Click"/>
+                    <Button x:Name="BtnRemoveNode" Content="Düğüm Sil" Height="25" Margin="0,0,0,5" Click="BtnRemoveNode_Click"/>
+                    <Button x:Name="BtnUpdateNode" Content="Düğüm Güncelle" Height="25" Margin="0,0,0,5" Click="BtnUpdateNode_Click"/>
+                    <Separator Margin="0,5"/>
+                    <Button x:Name="BtnAddEdge" Content="Kenar Ekle" Height="25" Margin="0,0,0,5" Click="BtnAddEdge_Click"/>
+                    <Button x:Name="BtnRemoveEdge" Content="Kenar Sil" Height="25" Click="BtnRemoveEdge_Click"/>
                 </StackPanel>
             </GroupBox>
 
@@ -47,13 +63,15 @@
                     <Button x:Name="BtnDijkstra" Content="Dijkstra (En Kısa Yol)" Height="25" Margin="0,0,0,5" Click="BtnDijkstra_Click"/>
                     <Button x:Name="BtnAStar" Content="A* (En Kısa Yol)" Height="25" Margin="0,0,0,5" Click="BtnAStar_Click"/>
                     <Separator Margin="0,5"/>
-                    <Button x:Name="BtnCentrality" Content="Merkezilik (Centrality)" Height="25" Click="BtnCentrality_Click"/>
+                    <Button x:Name="BtnCentrality" Content="Merkezilik (Centrality)" Height="25" Margin="0,0,0,5" Click="BtnCentrality_Click"/>
+                    <Separator Margin="0,5"/>
+                    <Button x:Name="BtnConnectedComponents" Content="Bağlı Bileşenler" Height="25" Margin="0,0,0,5" Click="BtnConnectedComponents_Click"/>
+                    <Button x:Name="BtnColoring" Content="Welsh-Powell Renklendirme" Height="25" Click="BtnColoring_Click"/>
                 </StackPanel>
             </GroupBox>
 
-
             <!-- Info Panel -->
-            <GroupBox Header="Bilgi / Sonuçlar" Height="150">
+            <GroupBox Header="Bilgi / Sonuçlar" Height="200">
                 <ScrollViewer>
                     <TextBlock x:Name="TxtInfo" TextWrapping="Wrap" Margin="5"/>
                 </ScrollViewer>
